--- a/projects/StarTrails/overview.html
+++ b/projects/StarTrails/overview.html
@@ -38,6 +38,8 @@
 				<a href="./systems_modeling.html">Systems Modeling</a>
 				<a href="./prototype.html">High-fidelity Prototype</a>
 				<a href="./design_crits.html">Design Crits</a>
+				<a href="./implementation.html">Implementation</a>
+				<a href="./ui_testing.html">UI Testing</a>
 			</div>
 
 			<header id="top"
