--- a/projects/StarTrails/prototype.html
+++ b/projects/StarTrails/prototype.html
@@ -30,6 +30,8 @@
 				<a href="./systems_modeling.html">Systems Modeling</a>
 				<a href="./prototype.html">High-fidelity Prototype</a>
 				<a href="./design_crits.html">Design Crits</a>
+				<a href="./implementation.html">Implementation</a>
+				<a href="./ui_testing.html">UI Testing</a>
 			</div>
 
 			<header id="top"
@@ -70,7 +72,7 @@
 
 
 							<h1>Star Trails</h1>
-							<h2 id="mission-stmt">High-fidelity Prototype</h2>
+							<h2 id="mission-stmt">High-Fidelity Prototype</h2>
 							<div class="MuiBox-root css-m507i9">
 								<p class="MuiTypography-root MuiTypography-body1 css-lj8hfv">
 
@@ -80,56 +82,88 @@
 							<p>After presenting our low-fidelity prototypes to class and to our clients, we received
 								numerous suggestions for improvement as summarized below:
 							<ul>
-								<li> feedback item 1... </li>
-								<li> feedback item 2... </li>
-								<li> feedback item 3... </li>
-								<li> feedback item 4... </li>
+								<li> For the bookmarked sites; it might be a good idea to have it’s own separate page to
+									allow people to bookmark a lot of sites</li>
+								<li> Settings button on the splash screen is confusing and not required</li>
+								<li> Users don't like intrusive questions regarding date and time they visited a site
+								</li>
+								<li> Review page is cluttered and needs to be shortened or simplified</li>
+								<li> Have the restaurant not be reviewable </li>
+								<li> Instead of saying "review" call it user contributed information or knowledge</li>
+								<li> Leave out the survey part on the review</li>
+								<li> Have two categories for sites visited and favorited sites</li>
 							</ul>
 
 
-							After considering and incorporating most of the feedback we received into our design, we
-							then set out to create a high-fidelity prototype. High-fidelity prototypes are ... We chose
-							to use Figma to develop our high-fidelity prototype because... Below are some screen shots
-							taken from our high-fidelity prototype... They depict... Next we will ....
+							Upon careful consideration and integration of the majority of the feedback we received, our
+							next step was the development of a high-fidelity prototype. High-fidelity prototypes are
+							intricate representations of the final product, offering a detailed and realistic view of
+							its features and functionality.
+							We opted for Figma as our development tool and we selected it due to its usability and
+							flexibility in regards to prototyping. Below, you'll find screenshots captured from our
+							high-fidelity prototype, showcasing our home screen, discovery screen, browse sites screen
+							and our site view screen. Moving forward, we will be focused on implementing the core
+							functionality and the feedback we were given from our prototype into our final
+							implementation.
 							<div class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-gp0h3g">
 								<div class="MuiBox-root css-1vp8jwk">
 
 									<div class="MuiBox-root css-1j8t7mm">
 										<div
 											class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lnqg4h">
-											<center><img src="./images/PrototypeEvent.png"
+											<center><img src="./images/hifi_discover.png"
 													style="max-height:400px;max-width:100%">
-												<img src="./images/eventSSDalton.png"
+												<img src="./images/hifi_home.png"
 													style="max-height:400px;max-width:100%">
 											</center>
 											<figcaption style="font-size: 14px;">
-												<center><em>Screen x</em></center>
+												<center><em>Discovery and Home Screen</em></center>
 											</figcaption>
 
-											<p>Brief description of what screen x above shows... </p>
+											<p>Pictured above is our Discovery and Home screen, if the user were to
+												click the home button on the bottom they would be redirected to the Home
+												screen on the right where they can select stargazing sites from a map or
+												view a list of popular sites. Additionally if the user chooses the
+												compass button on the bottom they would be directed to the Discovery
+												page on the left. Where the user could browse sites, view celestial
+												events, or simply lookup tips and fact on stargazing.</p>
 
 										</div>
 									</div>
 								</div>
 							</div>
 
-							<p>These screens show...
+							<p>We gathered incredible feedback from our clients and peers on these two screen
+								specifically on how the home screen from the user perspective makes more sense as a
+								discovery screen, and in the end we decided to "flip" the screens. In other words, we
+								directed our home button to the discovery screen and our discovery button to the home
+								screen.</p>
 							<div class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-gp0h3g">
 								<div class="MuiBox-root css-1vp8jwk">
 
 									<div class="MuiBox-root css-1j8t7mm">
 										<div
 											class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lnqg4h">
-											<center><img src="./images/PrototypeEvent.png"
+											<center><img src="./images/hifi_browse.png"
 													style="max-height:400px;max-width:100%">
-												<img src="./images/eventSSDalton.png"
+												<img src="./images/hifi_site.png"
 													style="max-height:400px;max-width:100%">
 											</center>
 											<figcaption style="font-size: 14px;">
-												<center><em>Screen y</em></center>
+												<center><em>Browse Site Screen & Site View Screen</em></center>
 											</figcaption>
 
-											<p>Brief description of what screen y above shows... </p>
+											<p>Pictured above is our site browsing and site view screens. As part of our
+												core functionality, we needed to allow the users to browse different
+												stargazing sites, and view detailed information regarding the site. The
+												site view in particular, contains a vast array of information on a
+												stargazing sites description, location, amenities, nearby businesses and
+												a user feedback section. Our clients tasked us with finding a different
+												word for "Review" or "Rating" to move away from a site having negative
+												feedback. Moving forward and into implementation we plan to replace the
+												word rating with "experience". Overall, we believe these designs will
+												give us a good reference point when we reach the implementation stage
+												and will help us visualize how we want our app to look.</p>
 
 										</div>
 									</div>
