Updated the last page with photos

--- a/projects/StarTrails/implementation.html
+++ b/projects/StarTrails/implementation.html
@@ -70,13 +70,141 @@
                     <div class="MuiBox-root css-13o7eu2">
                         <div class="MuiBox-root css-qwy28t" role="main">
 
-
                             <h1>Implementation</h1>
-                            <p>Our main goal for the months of January to the Beginning of May was to create a well
-                                developed implementation of our product. </p>
+                            <p>Our main goal for the months of January to the beginning of May was to create a
+                                well-developed implementation of our product. This implementation process was broken
+                                down into early stages, main functionalities, and late stages, each encompassing key
+                                aspects of the Star Trails application development.</p>
+
                             <h2>Early Stages</h2>
-                            <p></p>
-                            <h2>Main functionalities Added</h2>
-                            <p></p>
+                            <p>The early stages of the project implementation focused on establishing the foundation of
+                                the application:</p>
+                            <ul>
+                                <li><strong>Requirement Specification:</strong> Finalized the list of requirements to
+                                    ensure clarity on what features and functionalities would be included in the final
+                                    product.</li>
+                                <li><strong>Systems Modeling and Storyboarding:</strong> Created system diagrams and
+                                    storyboards to visualize the user flow and system architecture.</li>
+                                <li><strong>Prototype Development:</strong> Developed a high-fidelity prototype using
+                                    Figma to represent the UI/UX design of the application.</li>
+                                <li><strong>Initial Firebase Setup:</strong> Configured Firebase for authentication,
+                                    Firestore, and storage functionalities.</li>
+                                <li><strong>Environment Setup:</strong> Set up the project environment using React
+                                    Native Expo and connected it to Firebase services.</li>
+                            </ul>
+
+                            <h2>Main Functionalities Added</h2>
+                            <p>During the main development phase, we implemented core features of the Star Trails
+                                application:</p>
+                            <ul>
+                                <li><strong>User Authentication:</strong> Implemented secure user sign-up, login, and
+                                    logout functionalities using Firebase Authentication.</li>
+                                <li><strong>Site Management:</strong> Developed the site management feature, allowing
+                                    users to view and bookmark stargazing sites.</li>
+                                <li><strong>Site Details and Amenities:</strong> Enabled users to view detailed
+                                    information about sites, including amenities, weather forecasts, and light pollution
+                                    data.</li>
+                                <li><strong>Celestial Events Calendar:</strong> Integrated an events calendar for
+                                    upcoming meteor showers, lunar eclipses, and other celestial phenomena.</li>
+                                <li><strong>Comment and Photo Sharing:</strong> Allowed users to leave comments and
+                                    share photos of stargazing sites.</li>
+                                <li><strong>Notification System:</strong> Added a notification system to remind users of
+                                    upcoming celestial events and saved site visits.</li>
+                                <li><strong>Map View:</strong> Created an interactive map to visualize stargazing sites
+                                    and nearby amenities.</li>
+                                <li><strong>Profile Management:</strong> Enabled users to manage their profiles,
+                                    including updating profile pictures and viewing bookmarked sites.</li>
+                            </ul>
+
                             <h2>Late Stages</h2>
-                            <p></p>
+                            <p>The late stages focused on refining the implementation through rigorous testing and
+                                incorporating feedback:</p>
+                            <ul>
+                                <li><strong>User Interface Testing:</strong> Conducted user interface testing to
+                                    identify areas for improvement in the UI/UX design.</li>
+                                <li><strong>Code Reviews:</strong> Organized code reviews to ensure consistency,
+                                    readability, and adherence to coding standards across the codebase.</li>
+                                <li><strong>Functional Testing:</strong> Developed comprehensive test cases to verify
+                                    the app's features and fix bugs or issues encountered during testing.</li>
+                                <li><strong>Performance Optimization:</strong> Optimized the app's performance by
+                                    reducing delays, improving navigation speed, and enhancing loading times.</li>
+                                <li><strong>Final Feedback Incorporation:</strong> Collected and incorporated feedback
+                                    from stakeholders and users into the final product to improve the overall user
+                                    experience.</li>
+                                <li><strong>Deployment Preparation:</strong> Prepared the application for deployment on
+                                    the Google Play Store, including finalizing the privacy policy and terms of service.
+                                </li>
+                            </ul>
+
+                            <h2>Final Product</h2>
+                            <p>The following screenshots showcase the final implementation of the Star Trails app and
+                                its core features:</p>
+
+                            <div class="screenshot">
+                                <p><strong>Login Screen:</strong> Provides secure sign-up and login functionalities for
+                                    users using Firebase Authentication.</p>
+                                <img src="./images/Welcome.png" alt="Login Screen"
+                                    style="width: auto; max-height: 600px;">
+                                <img src="./images/CreateAccount.png" alt="Login Screen"
+                                    style="width: auto; max-height: 600px;">
+
+                            </div>
+                            <div class="screenshot">
+                                <p><strong>Site Management:</strong> Allows users to view and bookmark stargazing sites,
+                                    complete with detailed information and amenities.</p>
+                                <img src="./images/SiteSearch.png" alt="Login Screen"
+                                    style="width: auto; max-height: 600px;">
+                                <img src="./images/SiteInfoNearby.png" alt="Login Screen"
+                                    style="width: auto; max-height: 600px;">
+
+                            </div>
+                            <div class="screenshot">
+                                <p><strong>Celestial Events Calendar:</strong> Displays upcoming meteor showers and
+                                    other celestial phenomena, helping users plan their trips.</p>
+                                <img src="./images/CelestialEvents.png" alt="Login Screen"
+                                    style="width: auto; max-height: 600px;">
+                            </div>
+                            <div class="screenshot">
+                                <p><strong>Map View:</strong> An interactive map showcasing stargazing sites and nearby
+                                    amenities.</p>
+                                <img src="./images/Discover.png" alt="Login Screen"
+                                    style="width: auto; max-height: 600px;">
+                                <img src="./images/DiscoverZoomed.png" alt="Login Screen"
+                                    style="width: auto; max-height: 600px;">
+                            </div>
+                            <div class="screenshot">
+                                <p><strong>Profile Management:</strong> Enables users to update profile pictures, manage
+                                    their profiles, and view bookmarked sites.</p>
+                                <img src="./images/ProfileScreen.png" alt="Profile Management"
+                                    style="width: auto; max-height: 600px;">
+                                <img src="./images/Profile2.png" alt="Profile Management"
+                                    style="width: auto; max-height: 600px;">
+                            </div>
+                            <div class="screenshot">
+                                <p><strong>Comments and Weather:</strong> Allows users to leave
+                                    comments and share
+                                    photos of stargazing sites.</p>
+                                <img src="./images/Comments.png" alt="Comment and Photo Sharing"
+                                    style="width: auto; max-height: 600px;">
+                                <img src="./images/SiteInfoWeather.png" alt="Comment and Photo Sharing"
+                                    style="width: auto; max-height: 600px;">
+                            </div>
+                            <div class="screenshot">
+                                <p><strong>Light Pollution Map:</strong> An interactive map that shows all the light
+                                    pollution in Montana so users can plan an optimal night sky experience. </p>
+                                <img src="./images/lightPollutionMap2.jpg" alt="Light Pollution Map"
+                                    style="width: auto; max-height: 600px;">
+                                <img src="./images/lightPollution3.png" alt="Light Pollution Map"
+                                    style="width: auto; max-height: 600px;">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
+
+</html>
