--- a/projects/StarTrails/ui_testing.html
+++ b/projects/StarTrails/ui_testing.html
@@ -76,10 +76,41 @@
                                 what aspects could or should be changed to create a better end product.</p>
 
                             <h2>Methods</h2>
+
                             <p>
-                                Our User-Interface testing methodology involved multiple approaches to ensure
-                                comprehensive feedback:
+                                Our User-Interface testing employs a combination of Code Reviews and Functional Testing
+                                to ensure comprehensive coverage of the app's functionality with minimal overlap,
+                                enhancing the learning experience for our computer science team.
                             </p>
+                            <ul>
+                                <li>
+                                    <strong>Code Reviews:</strong> This method involves the evaluation of submitted code
+                                    by team members other than the author to check for errors, adherence to coding
+                                    standards, and overall legibility. The process aids in ensuring consistent coding
+                                    practices across the team and facilitates mutual learning.
+                                </li>
+                                <li>
+                                    <strong>Functional Testing:</strong> Conducted on completed functionalities with
+                                    predetermined input and output parameters, this testing verifies that the code
+                                    functions as intended and helps uncover flaws or vulnerabilities. It complements the
+                                    Code Reviews by testing the actual running of the code rather than its structure or
+                                    style.
+                                </li>
+                            </ul>
+                            <p>
+                                Both testing strategies are critical as they address different aspects of the software
+                                quality assurance process. Code Reviews focus on the code's readability and
+                                maintainability, ensuring all team members can understand and manage the codebase.
+                                Functional Testing, on the other hand, ensures that the application behaves correctly
+                                under various scenarios and usage conditions.
+                            </p>
+                            <p>
+                                We manage testing risks by utilizing version control systems to safeguard against code
+                                losses and by employing automated tools that handle potential crashes or bugs during
+                                tests. This strategic approach not only secures our code but also streamlines the
+                                development process.
+                            </p>
+
                             <ul>
                                 <li><strong>Recruitment of Testers:</strong> We recruited a diverse group of six
                                     participants, each from different backgrounds and relationships with stargazing.
