--- a/projects/StarTrails/ui_testing.html
+++ b/projects/StarTrails/ui_testing.html
@@ -77,15 +77,7 @@
 
                             <h2>Methods</h2>
                             <p>
-                                Our User-Interface testing methodology involved multiple approaches to ensure
-                                comprehensive feedback:
-                            </p>
-
-                            <p>
-                                We manage testing risks by utilizing version control systems to safeguard against code
-                                losses and by employing automated tools that handle potential crashes or bugs during
-                                tests. This strategic approach not only secures our code but also streamlines the
-                                development process.
+                                Our User-Interface testing methodology comprised of: Testing sessions, a post-test Questionnaire and post-test Interviews
                             </p>
 
                             <ul>
