--- a/projects/StarTrails/ui_testing.html
+++ b/projects/StarTrails/ui_testing.html
@@ -77,7 +77,7 @@
 
                             <h2>Methods</h2>
                             <p>
-                                Our User-Interface testing methodology comprised of: Testing sessions, a post-test Questionnaire and post-test Interviews
+                                Our User-Interface testing methodology comprised of: 
                             </p>
 
                             <ul>
